Bad spacing between navbar and deslizable menu was solved

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,15 +15,17 @@ nav {
   position: sticky;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   top: 0;
-  padding: 10px 0;
+  height: 8vh;
+  /* padding: 10px 0; */
 }
 
 .menu-desplazable {
   position: fixed;
   right: 0;
   width: 100%;
-  top: 8%;
+  top: 8vh;
   background-color: #0000ec;
   cursor: pointer;
   transform: translate(100%);
